syntax = "proto3";
package protoBuf;

import "computation-msgs.proto";
import "registration-msgs.proto";

// To compile the protobuf to Go run the following inside the protoBuf folder:
// protoc -I=. --go_out=plugins=grpc:.  coordinator.proto

// To compile the protobuf to Python run the following inside the protoBuf folder:
// python -m grpc_tools.protoc -I=. --python_out=. --grpc_python_out=. coordinator.proto


// RPC service at the coordinator that will handle requests from sites and cloud algos
service Coordinator {

    // Registers an algorithm from a site at the coordinator
    rpc RegisterSite (SiteRegReq) returns (SiteRegRes) {}

    // Relays a computation request from the cloud to appropriate sites
    rpc Compute (ComputeRequest) returns (ComputeResponses) {}

}
